<resources>
    <string name="url">http://192.168.45.116:9090</string>
    <string name="app_name">SkyCinema</string>
    <string name="preview">Preview</string>
    <string name="pass">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="middle_name">Отчество</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="main">Главное</string>
    <string name="my">Моё</string>
    <string name="search">Поиск</string>
    <string name="profile">Профиль</string>
    <string name="reviews">Reviews</string>
    <string name="moviepreview">MoviePreview</string>
    <string name="watch">Смотреть</string>
    <string name="cast">Каст</string>
    <string name="save">Сохранить</string>
    <string name="movie_name">Название</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="save_data">Сохранить данные</string>
</resources>