<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mainButton"
        android:icon="@drawable/home"
        android:title="@string/main"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bookmarkButton"
        android:icon="@drawable/bookmark"
        android:title="@string/my"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/searchButton"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileButton"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>
